Add rotation visualization tool url

--- a/teoricas/teorica_01/src/tools.tex
+++ b/teoricas/teorica_01/src/tools.tex
@@ -13,5 +13,6 @@
         \item Yed: diagramas
         \item inkscape: gráficos vectorizados + plugin \href{TexText}{https://textext.github.io/textext/}
         \item pdfpc: visualizador de slides (hechas en latex)
+        \item Visualizar Rotaciones \href{https://articulatedrobotics.xyz/tools/rotation-calculator}{https://articulatedrobotics.xyz/tools/rotation-calculator}
     \end{itemize}
 \end{frame}
