--- a/teoricas/teorica_08/src/bibliography.tex
+++ b/teoricas/teorica_08/src/bibliography.tex
@@ -30,6 +30,9 @@
         \item Philipp Hennig - Probabilistic Machine Learning - Lecture 17 - Factor Graphs \url{https://youtu.be/fXD6KJB1U20}
         \item Lennart Svensson - Machile Learning Tutorial: Factor Graphs, Belief Propagation and Variational Techniques \url{https://youtu.be/yQg34-2QhvE}
     \end{itemize}
+
+    \TODO{Trabajo Práctico de SLAM a considerar\href{https://github.com/MiguelAngelCalveraUnizar/Mini-SLAM_student}{https://github.com/MiguelAngelCalveraUnizar/Mini-SLAM_student}} 
+
     
 \end{frame}
 
